updated vscode instances

--- a/builds/vscode/Dockerfile
+++ b/builds/vscode/Dockerfile
@@ -5,12 +5,11 @@ USER root
 RUN set -ex; \
     apt-get update; \
     apt-get install -y --no-install-recommends \
-    nodejs npm ;
+    nodejs npm python3.6 python-pip python3-pip;
 
 #RUN curl -sS https://getcomposer.org/installer | php -- \
 #    --filename=composer \
 #    --install-dir=/usr/local/bin; 
 
-USER coder
-EXPOSE 8081
-ENTRYPOINT ["dumb-init", "code-server", "--host", "0.0.0.0", "--port", "8080" ]
+
+ENTRYPOINT ["dumb-init", "code-server", "--host", "0.0.0.0", "--auth", "none" ]
